--- a/Git_HTML/HTMLBasic/index.html
+++ b/Git_HTML/HTMLBasic/index.html
@@ -1,12 +1,97 @@
 <html>
-    <head></head>
-    <body>
-        <!-- 
+
+<head></head>
+
+<body>
+    <h3 id="tbContent">Table content</h3>
+    <!-- ol : order list 
+            li: list item
+            nested
+        -->
+    <ol type="i">
+        <li>
+            <a href="#chapter1">Chapter 1</a>
+        </li>
+        <li>
+            <a href="#chapter2">Chapter 2</a>
+        </li>
+    </ol>
+    <!-- ul: unorder list -->
+    <ul type="disc">
+        <li>
+            Đồ uống
+            <ol>
+                <li>Huda trâu</li>
+                <li>
+                    Pepsi
+                    <ul>
+                        <li>Chai</li>
+                        <li>Lon</li>
+                        <li>Bì</li>
+                    </ul>
+                </li>
+            </ol>
+        </li>
+        <li>Thức ăn</li>
+    </ul>
+    <!-- 
             p : paragraph
             comment: ctrl + /
          -->
-        <p style="color:red; background-color:green;">
-            Chúng ta vẫn biết rằng, làm việc với một đoạn văn bản dễ đọc và rõ nghĩa dễ gây rối trí và cản trở việc tập trung vào yếu tố trình bày văn bản.
-        </p>
-    </body>
+    <p style="color: red; background-color: green">
+        Chúng ta vẫn biết rằng, làm việc với một đoạn văn bản dễ đọc và rõ nghĩa dễ gây rối trí và cản trở việc tập trung vào yếu tố trình bày văn bản.
+    </p>
+    <pre>
+            Chúng                  ta vẫn biết rằng, 
+            làm việc với một đoạn văn bản dễ đọc và rõ nghĩa dễ gây rối trí 
+            và cản trở việc tập trung vào yếu tố trình bày văn bản.
+        </pre
+    >
+    <!-- 
+            h1 -> h6 
+            h: heading
+         -->
+    <h1 id="chapter1">Heading 1</h1>
+    <p style="color: red; background-color: green">
+      Chúng ta vẫn biết rằng, làm việc với một đoạn văn bản dễ đọc và rõ nghĩa
+      dễ gây rối trí và cản trở việc tập trung vào yếu tố trình bày văn bản.
+    </p>
+    <h2>Heading 2</h2>
+    <p style="color: red; background-color: green">
+      Chúng ta vẫn biết rằng, làm việc với một đoạn văn bản dễ đọc và rõ nghĩa
+      dễ gây rối trí và cản trở việc tập trung vào yếu tố trình bày văn bản.
+    </p>
+    <h3>Heading 3</h3>
+    <p style="color: red; background-color: green">
+      Chúng ta vẫn biết rằng, làm việc với một đoạn văn bản dễ đọc và rõ nghĩa
+      dễ gây rối trí và cản trở việc tập trung vào yếu tố trình bày văn bản.
+    </p>
+    <h4>Heading 4</h4>
+    <p style="color: red; background-color: green">
+      Chúng ta vẫn biết rằng, làm việc với một đoạn văn bản dễ đọc và rõ nghĩa
+      dễ gây rối trí và cản trở việc tập trung vào yếu tố trình bày văn bản.
+    </p>
+    <h5>Heading 5</h5>
+    <p style="color: red; background-color: green">
+      Chúng ta vẫn biết rằng, làm việc với một đoạn văn bản dễ đọc và rõ nghĩa
+      dễ gây rối trí và cản trở việc tập trung vào yếu tố trình bày văn bản.
+    </p>
+    <h6 id="chapter2">Heading 6</h6>
+    <p style="color: red; background-color: green">
+      Chúng ta vẫn biết rằng, làm việc với một đoạn văn bản dễ đọc và rõ nghĩa
+      dễ gây rối trí và cản trở việc tập trung vào yếu tố trình bày văn bản.
+    </p>
+
+    <!-- ctrt + space -->
+    <a href="https://google.com" target="_blank">Go to google</a>
+    <a href="about.html">Got to About page</a>
+    <!-- br: break -->
+    <br />
+    <a href="#tbContent">go to top</a>
+    <br />
+    <p>
+      please email to me, my email:
+      <a href="mailto:khoa.nguyen@codegym.vn">khoa.nguyen@codegym.vn</a>
+    </p>
+  </body>
 </html>
