--- a/JavaScript/JavaScriptBasic/calculate.html
+++ b/JavaScript/JavaScriptBasic/calculate.html
@@ -88,6 +88,14 @@
             textbox.value += v;
         }
     }
+
+    let arr = [7, 3, 9, 10, 1, 2, 3, 4, 5, 6];
+    arr.sort(function(a, b) {
+            return b - a;
+        })
+        // let newArr = arr.map(function(n) {
+        //     return n * 2;
+        // });
 </script>
 
 </html>
